--- a/docs/pioneer-programs/01-community-education.mdx
+++ b/docs/pioneer-programs/01-community-education.mdx
@@ -18,6 +18,6 @@ Contributions are encouraged! Share your educational resources to expand this li
 
 -   [Cardano Academy](https://academy.cardanofoundation.org/) – learn about blockchain – empowering the digital architects of the future
 -   [IO Academy YouTube channel](https://www.youtube.com/channel/UCX9j__vYOJu00iqBrCzecVw) – explore learning resources and check out [this section](/pioneer-programs/education/) for more details
--   [Gimbalabs](https://www.gimbalabs.com/gimbalgrid) – a space for people to learn about and participate in the Cardano blockchain
+-   [Gimbalabs](https://www.gimbalabs.com/) – a space for people to learn about and participate in the Cardano blockchain
 -   [NMKR Docs](https://docs.nmkr.io/) – helping users find their way around NMKR to mint non-fungible tokens (NFTs) and fungible tokens on Cardano
 -   [CTimelines](https://ctimelines.io/) – [Cardano Timeline](https://ctimelines.io/cardano-timeline) and [Research Timeline](https://ctimelines.io/research-timeline) infographics documenting the ecosystem’s history in a visual, accessible format for learners and the wider community
