Add Yoroi to 08-types-of-wallets.mdx

--- a/docs/about-cardano/02-new-to-cardano/08-types-of-wallets.mdx
+++ b/docs/about-cardano/02-new-to-cardano/08-types-of-wallets.mdx
@@ -120,3 +120,4 @@ See
 - [Coin Wallet](https://coin.space/)
 - [NuFi](https://nu.fi/) 
 - [NOW Wallet](https://walletnow.app)
+- [Yoroi](https://yoroi-wallet.com/)
