Add Plomin hard fork documentation
- Add new documentation page for Plomin hard fork (08-plomin.mdx)
- Update eras-and-phases.mdx to reference Plomin in Conway era section
- Document Plomin as the second governance upgrade completing CIP-1694
- Include details on DRep activation and full governance features

--- a/docs/about-cardano/05-evolution/02-eras-and-phases.mdx
+++ b/docs/about-cardano/05-evolution/02-eras-and-phases.mdx
@@ -63,6 +63,13 @@ The Vasil upgrade significantly enhanced Cardano’s performance and developer e
 
 These features collectively improved the efficiency, expressivity, and scalability of the Cardano network, laying a stronger foundation for advanced smart contracts and DApp development.
 
+The Valentine (SECP) upgrade, executed on February 14, 2023, was an intra-era hard fork in the Babbage ledger era that followed Vasil. It introduced new Plutus built-in functions for SECP elliptic curves—enabling native verification of ECDSA and Schnorr signatures on Cardano. This focused change improves interoperability and developer experience without changing the ledger era.
+Key facts:
+- Intra-era hard fork that kept the ledger in Babbage and followed Vasil
+- Added Plutus built-ins for ECDSA and Schnorr; implemented and audited by experts to provide a high level of security
+- Helps DApp developers verify signatures from other ecosystems (including EVM sidechains) more simply and cost-effectively
+- Took place on February 14, 2023 (epoch 394), protocol version 8.0.
+
 ### Conway era
 
 The Conway ledger era is part of Cardano’s _Voltaire development phase_, focused on transforming the network into a self-governing system. It encompasses two hard forks: _Chang_, which introduced the initial governance framework, and _Plomin_, which completed the governance feature set (including DReps, treasury withdrawals, and full governance actions) under [CIP-1694](https://cips.cardano.org/cip/CIP-1694).
