Apply suggestions from review
Co-authored-by: olgahryniuk <67585499+olgahryniuk@users.noreply.github.com>

--- a/docs/about-cardano/05-evolution/02-eras-and-phases.mdx
+++ b/docs/about-cardano/05-evolution/02-eras-and-phases.mdx
@@ -63,7 +63,7 @@ The Vasil upgrade significantly enhanced Cardano’s performance and developer e
 
 These features collectively improved the efficiency, expressivity, and scalability of the Cardano network, laying a stronger foundation for advanced smart contracts and DApp development.
 
-The Valentine (SECP) upgrade, executed on February 14, 2023, was an intra-era hard fork in the Babbage ledger era that followed Vasil. It introduced new Plutus built-in functions for SECP elliptic curves—enabling native verification of ECDSA and Schnorr signatures on Cardano. This focused change improves interoperability and developer experience without changing the ledger era.
+The Valentine (SECP) upgrade, executed on February 14, 2023, was an intra-era hard fork in the Babbage ledger era that followed the Vasil upgrade. It introduced new Plutus built-in functions for SECP elliptic curves – enabling native verification of ECDSA and Schnorr signatures on Cardano. This focused change improved interoperability and developer experience without changing the ledger era.
 Key facts:
 - Intra-era hard fork that kept the ledger in Babbage and followed Vasil
 - Added Plutus built-ins for ECDSA and Schnorr; implemented and audited by experts to provide a high level of security
