--- a/docs/about-cardano/05-evolution/04-upgrades/08-plomin.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/08-plomin.mdx
@@ -5,7 +5,7 @@ metaTitle: Plomin - the second governance upgrade in the Conway era
 
 # Plomin hard fork
 
-Plomin, the second governance upgrade in the Conway era that completes Cardano's on-chain governance features under [`CIP-1694`](https://github.com/cardano-foundation/CIPs/tree/master/CIP-1694) and marks the transition to community-driven decision-making. See also the companion explainer for [Chang](https://docs.cardano.org/about-cardano/evolution/upgrades/chang).
+Plomin marks the second governance upgrade in the Conway era, completing Cardano's on-chain governance features under [CIP-1694](https://github.com/cardano-foundation/CIPs/tree/master/CIP-1694) and marking the transition to community-driven decision-making. See also the companion explainer for [Chang](/about-cardano/evolution/upgrades/chang).
 
 ## What is Plomin
 
@@ -13,7 +13,7 @@ Plomin is the January 29, 2025 hard fork (epoch 537, protocol version 10.0) that
 
 ## Why it matters
 
-With Plomin, Cardano completes the Conway governance era and moves to **full decentralized governance**. ADA holders can now participate directly or via DReps in decisions such as protocol updates, treasury withdrawals, and future hard forks. The upgrade was enacted following approval by stake pool operators (SPOs) and the interim constitutional committee (ICC), making it the first community-driven hard fork in Cardano history.
+With Plomin, Cardano completed the Conway governance era and moved to **decentralized on-chain governance**. Ada holders can now participate directly or via DReps in decisions such as protocol updates, treasury withdrawals, and future hard forks. The upgrade was enacted following approval by stake pool operators (SPOs) and the interim constitutional committee (ICC), making it the first community-driven hard fork in Cardano history.
 
 ## Background
 
@@ -21,7 +21,7 @@ Cardano introduced on-chain governance in two stages within the Conway era: **Ch
 
 ## Governance scope after Plomin
 
-Plomin enables a **tripartite** governance system in which representative bodies can consider and ratify major decisions. In the immediate post-fork period, Cardano’s elected delegates focus on three foundational items: **the Constitution, the budget, and the roadmap**—each to be decided through on-chain processes now made possible by Plomin. 
+Plomin enables a **tripartite** governance system in which representative bodies can consider and ratify major decisions. In the immediate post-fork period, Cardano’s elected delegates focus on three foundational items: **the constitution, the budget, and the roadmap** – each to be decided through on-chain processes now made possible by Plomin. 
 
 ## Feature overview
 
