--- a/docs/stake-pool-operators/01-operating-a-stake-pool.mdx
+++ b/docs/stake-pool-operators/01-operating-a-stake-pool.mdx
@@ -28,5 +28,5 @@ To get started with stake pool operations, refer to:
 | Testnets               | [Cardano testnet environments](/cardano-testnets/environments), [testnets faucet](/cardano-testnets/tools/faucet/).                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | Tools                  | [Cardano ecosystem tools](https://developers.cardano.org/tools/), [community-built developer tools](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano).                                                                                                                                                                                                                                                                                                                                                                                               |
 | Explorers              | [AdaStat](https://adastat.net/transactions), [Adatools](https://adatools.io/), [Cardanoscan](https://cardanoscan.io/transactions), [Cexplorer](https://cexplorer.io/), [Cardano Assets](https://cardanoassets.com/), [Pool.pm](https://pool.pm/tokens), [Cardano PoolTool](https://pooltool.io/).                                                                                                                                                                                                                        |
-| SPO alliances          | [Guild Operators](https://cardano-community.github.io/guild-operators/): a group of well-known and experienced community members that provides information about guild tools that simplify various stake operations, [Cardano Single Pool Alliance (SPA)](https://singlepoolalliance.net/): a group of separate SPOs who have vowed to run a single stake pool for the sole purpose of providing the Cardano ecosystem with true decentralization, [xSPO Alliance](https://www.xspo-alliance.org/): a group of small SPOs that joined with a total live stake of less than one million ada each. |
+| SPO alliances          | [Guild Operators](https://cardano-community.github.io/guild-operators/): a group of well-known and experienced community members that provides information about guild tools that simplify various stake operations, [Cardano Single Pool Alliance (SPA)](https://singlepoolalliance.net/): a group of separate SPOs who have vowed to run a single stake pool for the sole purpose of providing the Cardano ecosystem with true decentralization. |
 | Communication channels | [SPO Telegram announcements channel](https://t.me/SPOannouncements), [IOG Technical Community Discord](https://discord.com/invite/5kaErDKDRq), [support](https://iohk.zendesk.com/hc/en-us).                                                                                                                                                                                                                                                                                                                                                                                                     |
