--- a/docs/developer-resources/03-transaction-tutorials/06-multiple-purposes.mdx
+++ b/docs/developer-resources/03-transaction-tutorials/06-multiple-purposes.mdx
@@ -41,7 +41,7 @@ addr_test1wzgd97kc864w62ulela5ykw8m64z2nu4wjejacyfp6u7qwqyz9v9m
 ```
 
 ```
-cardano-cli transaction policyid --script-file payment.script
+cardano-cli latest transaction policyid --script-file payment.script
 90d2fad83eaaed2b9fcffb4259c7deaa254f9574b32ee0890eb9e038
 ```
 
@@ -59,7 +59,7 @@ cardano-cli query utxo --address $(cat payment.addr)
 In this transaction, the example sets a `tx-out-inline-datum` file that only contains the number 42. This is essential since you wouldn't be able to get the funds from the script if it does not have a datum:
 
 ```
-cardano-cli transaction build --tx-in 12bc01bca615bb4cbe5f36b06d86092ad3c8a10e6a37e09f94a5f006f3aaf230#0 --tx-out $(cat payment.script.addr)+10000000 --change-address $(cat payment.addr) --tx-out-inline-datum-file datum.json --out-file 1st.tx
+cardano-cli latest transaction build --tx-in 12bc01bca615bb4cbe5f36b06d86092ad3c8a10e6a37e09f94a5f006f3aaf230#0 --tx-out $(cat payment.script.addr)+10000000 --change-address $(cat payment.addr) --tx-out-inline-datum-file datum.json --out-file 1st.tx
 
 cat datum.json
 {
@@ -102,7 +102,7 @@ cardano-cli query stake-address-info --address $(cat stake.addr)
 Now you can build the transaction with multiple purposes:
 
 ```
-cardano-cli transaction build \
+cardano-cli latest transaction build \
     --tx-in 04dfd8feaf87f82c8ec771954179879b22b5f693ed86d78a749111eed2de7879#1 \
     --tx-in 04dfd8feaf87f82c8ec771954179879b22b5f693ed86d78a749111eed2de7879#0 \
     --tx-in-script-file payment.script \
