Update a link to Cardano constitution

--- a/docs/about-cardano/06-governance-overview.mdx
+++ b/docs/about-cardano/06-governance-overview.mdx
@@ -19,7 +19,7 @@ Cardano’s self-sustaining governance requires the following roles to function 
 
 As with stake pools, any ada owner may register to be a DRep and represent themselves and/or others. Also, as with stake pools, ada owners may, instead, delegate their voting rights to any DRep. Voting rights are based on the total ada that is delegated, as a whole number of lovelaces (one ada = 1,000,000 lovelaces).
 ## Driven by the Cardano constitution 
-The Cardano Blockchain Ecosystem Constitution (‘[Cardano constitution](https://constitution.gov.tools/en/constitution)') is designed to be the founding document that brings together the community’s values and vision and puts them into text as a set of rules and principles to abide by to maintain the sustainability of the Cardano network.
+The Cardano Blockchain Ecosystem Constitution (‘[Cardano constitution](https://docs.intersectmbo.org/archive/cardano-governance-archive/cardano-constitution/read-the-cardano-constitution)') is designed to be the founding document that brings together the community’s values and vision and puts them into text as a set of rules and principles to abide by to maintain the sustainability of the Cardano network.
 ## Why bother?
 The pioneer entities of Cardano – EMURGO, Input | Output, and the Cardano Foundation – have relinquished the genesis keys of the blockchain, handing a more mature governance system to the community. Now, the community must take up the challenge and take Cardano to the next level, which means all ada owners must get involved.  
 
