--- a/docs/developer-resources/03-transaction-tutorials/index.mdx
+++ b/docs/developer-resources/03-transaction-tutorials/index.mdx
@@ -34,22 +34,20 @@ Each transaction includes an identifier known as `TxId`, and after completing
 these three steps, you can view transaction's content in the Cardano Explorer,
 accessible at https://explorer.cardano.org, for example.
 
-## Transaction tutorials index
+:::info
 
-In this section, you will find tutorials on how to create:
+To start working with transactions, see:
 
-- [Minting transactions](https://docs.cardano.org/developer-resources/transaction-tutorials/minting-transaction)
-- [Staking transactions](https://docs.cardano.org/developer-resources/transaction-tutorials/stake-transaction)
-- [Withdrawing transactions](https://docs.cardano.org/developer-resources/transaction-tutorials/withdraw-transaction)
-- [Transactions with funds redelegation](https://docs.cardano.org/developer-resources/transaction-tutorials/redelegate-transaction)
-- [Transactions for multiple purposes](https://docs.cardano.org/developer-resources/transaction-tutorials/multiple-purposes)
+- [Transactions overview on Developer Portal](https://developers.cardano.org/docs/learn/core-concepts/transactions/)
+- [Simple transactions on Developer Portal](https://developers.cardano.org/docs/get-started/create-simple-transaction/)
+
+:::
 
 **For additional references, see**:
 
 - [Building and signing transactions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/building-and-signing-tx.md)
 - [Diagnosing transaction problems and troubleshooting](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/diagnosing-transactions.md)
 - [Transaction metadata](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/tx-metadata.md)
-- [Simple transactions](https://developers.cardano.org/docs/get-started/create-simple-transaction/)
 - [Native assets](https://developers.cardano.org/docs/native-tokens/)
 - [Cardano governance update proposals](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/cardano-governance.md)
 - [Creating Cardano testnets](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/create-cardano.md)
