--- a/docs/pioneer-programs/02-education.mdx
+++ b/docs/pioneer-programs/02-education.mdx
@@ -14,7 +14,7 @@ The team brings together extensive experience in curriculum design, project mana
 
 The IO education team has collaborations with various universities and educational institutions worldwide to deliver high-quality education, including:
 
--   [University of Edinburgh](https://www.ed.ac.uk/), where there is a blockchain laboratory run by IO’s chief scientist, [Prof Aggelos Kiayias](https://iohk.io/en/leadership/aggelos-kiayias), and his research team
+-   [University of Edinburgh](https://www.ed.ac.uk/), where there is a blockchain laboratory run by IO’s chief scientist, Prof Aggelos Kiayias, and his research team
 -   [University of Athens](https://en.uoa.gr/)
 -   [University of West Indies](https://www.uwi.edu/)
 -   [University of Wyoming](https://www.uwyo.edu/index.html)
