--- a/docs/about-cardano/05-evolution/03-about-hard-forks.mdx
+++ b/docs/about-cardano/05-evolution/03-about-hard-forks.mdx
@@ -26,7 +26,7 @@ A combinator is a technical term used to indicate the combination of certain
 processes or things. In the case of Cardano, a hard fork combinator combines
 protocols, thereby enabling the [era-to-era transition](https://iohk.io/en/blog/posts/2020/04/29/from-byron-to-shelley-part-one-the-testnets/) without system
 interruption or restart. It ensured that Byron and Shelley ledgers appeared as *one*
-ledger. Shifting from [Ouroboros BFT](https://eprint.iacr.org/2018/1049.pdf) to [Ouroboros Praos](https://iohk.io/en/research/library/papers/ouroboros-praosan-adaptively-securesemi-synchronous-proof-of-stake-protocol/) did not require all nodes to
+ledger. Shifting from [Ouroboros BFT](https://eprint.iacr.org/2018/1049.pdf) to [Ouroboros Praos](https://www.iog.io/papers/ouroboros-praos-an-adaptively-secure-semi-synchronous-proof-of-stake-protocol) did not require all nodes to
 update simultaneously. Instead, nodes could update gradually, in fact, some could
 run Byron blocks, while others could run Shelley blocks.
 
