Update elevant-research-papers links

--- a/docs/about-cardano/04-explore-more/12-relevant-research-papers.mdx
+++ b/docs/about-cardano/04-explore-more/12-relevant-research-papers.mdx
@@ -62,11 +62,11 @@ environment once the majority of nodes are run by network participants.
 
 [Account Management in Proof of Stake Ledgers](https://eprint.iacr.org/2020/525.pdf)
 
-[Flexible Formality: Practical Experience with Agile Formal Methods](https://iohk.io/en/research/library/papers/flexible-formalitypractical-experience-with-agile-formal-methods/)
+[Flexible Formality: Practical Experience with Agile Formal Methods](https://www.iog.io/papers/flexible-formality-practical-experience-with-agile-formal-methods)
 
 [Coalition-Safe Equilibria with Virtual Payoffs](https://arxiv.org/pdf/2001.00047.pdf)
 
-[Efficient Random Beacons with Adaptive Security for Ungrindable Blockchains](https://iohk.io/en/research/library/papers/efficient-random-beacons-with-adaptive-security-for-ungrindable-blockchains/)
+[Efficient Random Beacons with Adaptive Security for Ungrindable Blockchains](https://www.iog.io/papers/efficient-random-beacons-with-adaptive-security-for-ungrindable-blockchains)
 
 [SecureCyclon: Dependable Peer Sampling](https://iohk.io/en/research/library/papers/securecyclon-dependable-peer-sampling/)
 
@@ -90,9 +90,9 @@ and non-fungible token standards.
 
 **Relevant research papers:**
 
-[The Extended UTXO Model](https://iohk.io/en/research/library/papers/the-extended-utxo-model/)
+[The Extended UTXO Model](https://www.iog.io/papers/the-extended-utxo-model)
 
-[UTXOma: UTXO with Multi-Asset Support](https://iohk.io/en/research/library/papers/utxoma-utxo-with-multi-asset-support/)
+[UTXOma: UTXO with Multi-Asset Support](https://www.iog.io/papers/utxomautxo-with-multi-asset-support)
 
 [Native Custom Tokens in the Extended UTXO Model](https://iohk.io/en/research/library/papers/native-custom-tokens-in-the-extended-utxo-model/)
 
@@ -100,13 +100,13 @@ and non-fungible token standards.
 
 [Scripting Smart Contracts for Distributed Ledger Technology](https://eprint.iacr.org/2016/1156.pdf)
 
-[Marlowe: financial contracts on blockchain](https://iohk.io/en/research/library/papers/marlowefinancial-contracts-on-blockchain/)
+[Marlowe: financial contracts on blockchain](https://www.iog.io/papers/marlowe-financial-contracts-on-blockchain)
 
-[Marlowe: implementing and analysing financial contracts on blockchain](https://iohk.io/en/research/library/papers/marloweimplementing-and-analysing-financial-contracts-on-blockchain/)
+[Marlowe: implementing and analysing financial contracts on blockchain](https://www.iog.io/papers/marlowe-implementing-and-analysing-financial-contracts-on-blockchain)
 
-[Unraveling recursion: compiling an IR with recursion to System F](https://iohk.io/en/research/library/papers/unraveling-recursioncompiling-an-ir-with-recursion-to-system-f/)
+[Unraveling recursion: compiling an IR with recursion to System F](https://www.iog.io/papers/unraveling-recursion-compiling-an-ir-with-recursion-to-system-f)
 
-[System F in Agda, for fun and profit](https://iohk.io/en/research/library/papers/system-f-in-agdafor-fun-and-profit/)
+[System F in Agda, for fun and profit](https://www.iog.io/papers/system-f-in-agda-for-fun-and-profit)
 
 [Translation Certification for Smart Contracts](https://iohk.io/en/research/library/papers/translation-certification-for-smart-contracts/)
 
@@ -134,13 +134,13 @@ potential to extend the network’s capabilities.
 
 [Hydra: Fast Isomorphic State Channels](https://eprint.iacr.org/2020/299.pdf)
 
-[Interhead Hydra: Two Heads are Better than One](https://iohk.io/en/research/library/papers/interhead-hydratwo-heads-are-better-than-one/)
+[Interhead Hydra: Two Heads are Better than One](https://www.iog.io/papers/interhead-hydra-two-heads-are-better-than-one)
 
-[Mithril: Stake-based Threshold Multisignatures](https://iohk.io/en/research/library/papers/mithrilstake-based-threshold-multisignatures/)
+[Mithril: Stake-based Threshold Multisignatures](https://www.iog.io/papers/mithril-stake-based-threshold-multisignatures)
 
 [Babel Fees via Limited Liabilities](https://iohk.io/en/research/library/papers/babel-fees-via-limited-liabilities/)
 
-[Djed: A Formally Verified Crypto-Backed Pegged Algorithmic Stablecoin](https://iohk.io/en/research/library/papers/djeda-formally-verified-crypto-backed-pegged-algorithmic-stablecoin/)
+[Djed: A Formally Verified Crypto-Backed Pegged Algorithmic Stablecoin](https://www.iog.io/papers/djed-a-formally-verified-crypto-backed-pegged-algorithmic-stablecoin)
 
 [State Machines across Isomorphic Layer 2 Ledgers](https://iohk.io/en/research/library/papers/state-machines-across-isomorphic-layer-2-ledgers/)
 
@@ -165,7 +165,7 @@ future development of the blockchain.
 
 [Updatable Blockchains](https://eprint.iacr.org/2020/887.pdf)
 
-[SoK: Blockchain Governance](https://iohk.io/en/research/library/papers/sokblockchain-governance/)
+[SoK: Blockchain Governance](https://www.iog.io/papers/sok-blockchain-governance)
 
 [Fait Accompli Committee Selection: Improving the Size-Security Tradeoff of Stake-Based Committees](https://iohk.io/en/research/library/papers/fait-accompli-committee-selection-improving-the-size-security-tradeoff-of-stake-based-committees/)
 
