Update 08-ouroboros-overview.mdx links

--- a/docs/about-cardano/03-learn/08-ouroboros-overview.mdx
+++ b/docs/about-cardano/03-learn/08-ouroboros-overview.mdx
@@ -23,12 +23,12 @@ Ouroboros selects participants - stake pools, in this case - to create new block
 
 Ouroboros comes in different versions:
 
--   [Ouroboros Classic](https://iohk.io/en/research/library/papers/ouroborosa-provably-secure-proof-of-stake-blockchain-protocol/)
--   [Ouroboros BFT](https://iohk.io/en/research/library/papers/ouroboros-bfta-simple-byzantine-fault-tolerant-consensus-protocol/)
--   [Ouroboros Praos](https://iohk.io/en/research/library/papers/ouroboros-praosan-adaptively-securesemi-synchronous-proof-of-stake-protocol/)
--   [Ouroboros Genesis](https://iohk.io/en/research/library/papers/ouroboros-genesiscomposable-proof-of-stake-blockchains-with-dynamic-availability/)
--   [Ouroboros Crypsinous](https://iohk.io/en/research/library/papers/ouroboros-crypsinousprivacy-preserving-proof-of-stake/)
--   [Ouroboros Chronos](https://iohk.io/en/research/library/papers/ouroboros-chronospermissionless-clock-synchronization-via-proof-of-stake/)
+-   [Ouroboros Classic](https://www.iog.io/papers/ouroboros-a-provably-secure-proof-of-stake-blockchain-protocol)
+-   [Ouroboros BFT](https://www.iog.io/papers/ouroboros-bft-a-simple-byzantine-fault-tolerant-consensus-protocol)
+-   [Ouroboros Praos](https://www.iog.io/papers/ouroboros-praos-an-adaptively-secure-semi-synchronous-proof-of-stake-protocol)
+-   [Ouroboros Genesis](https://www.iog.io/papers/ouroboros-genesis-composable-proof-of-stake-blockchains-with-dynamic-availability)
+-   [Ouroboros Crypsinous](https://www.iog.io/papers/ouroboros-crypsinous-privacy-preserving-proof-of-stake)
+-   [Ouroboros Chronos](https://www.iog.io/papers/ouroboros-chronos-permissionless-clock-synchronization-via-proof-of-stake)
 -   [Ouroboros Leios](https://iohk.io/en/research/library/papers/high-throughput-permissionless-blockchain-consensus-under-realistic-network-assumptions/).
 
 ### Ouroboros Classic
