--- a/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
+++ b/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
@@ -12,16 +12,16 @@ conjunction with the Cardano component dependencies definition.
 If you only require using the node, such as interacting directly with the node
 or managing stake pool operations, we recommend the latest node version.
 If you need compatibility with all components, we recommend using
-version 10.1.4.
+version 10.5.4.
 
-| [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                          | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                         | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano Rosetta Java](https://github.com/cardano-foundation/cardano-rosetta-java)     | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                   | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                         |
+| [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                          | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                         | [Cardano Rosetta (TS, deprecated)](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                  | [Cardano Rosetta Java](https://github.com/cardano-foundation/cardano-rosetta-java)     | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                   | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                         |
 |------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|:---------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **[10.6.2](https://github.com/IntersectMBO/cardano-node/releases/tag/10.6.2)** (major release) | [13.6.0.5](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.5) | | | | |
-| **[10.5.4](https://github.com/IntersectMBO/cardano-node/releases/tag/10.5.4)** (update)        | [13.6.0.5](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.5) |                                            | [2.0.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/2.0.0) | [8.4.2](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.4.2) | [v2025-12-15](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2025-12-15) |
-| **[10.4.1](https://github.com/IntersectMBO/cardano-node/releases/tag/10.4.1)** (major release) | [13.6.0.5](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.5)                                                                                                                                                   |                                                                                                                                                                     | [1.3.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.3.0)  
+| **[10.5.4](https://github.com/IntersectMBO/cardano-node/releases/tag/10.5.4)** (update)        | [13.6.0.5](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.5)                                                                                                                                                   |                                                                                                                                                                     | [1.4.3](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.4.3)/[2.0.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/2.0.0)/[2.1.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/2.1.0) | [8.4.2](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.4.2)/[8.4.3](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.4.3)                                                                                   | [v2025-12-15](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2025-12-15) |
+| **[10.4.1](https://github.com/IntersectMBO/cardano-node/releases/tag/10.4.1)** (major release) | [13.6.0.5](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.5)                                                                                                                                                   |                                                                                                                                                                     | [1.3.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.3.0)/[1.4.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.4.0)  
 | **[10.3.1](https://github.com/IntersectMBO/cardano-node/releases/tag/10.3.1)** (major release) |                                                                                                                                                                                                                                     |                                                                                                                                                                     | [1.2.8](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.2.8) |                                                                                                                                                                     | 
 | **[10.2.1](https://github.com/IntersectMBO/cardano-node/releases/tag/10.2.1)** (major release) |                                                                                                                                                                                                                                     |                                                                                                                                                                     | [1.2.7](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.2.7) |                                                                                                                                                                     | [v2025-03-31](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2025-03-31)
-| **[10.1.4](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.4)** (update)        | [13.6.0.4](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.4)                                                                                                                                                   | [2.4.3](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.3)                                                                                   | [1.2.6](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.2.6) | [8.3.3](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.3)                                                                                   | [v2025-03-04](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2025-03-04)                                                                                            |                                                                                                                                                                                |
+| **[10.1.4](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.4)** (update)        | [13.6.0.4](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.4)                                                                                                                                                   | [2.4.3](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.3)/[2.5.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.5.0)                                                                                  | [1.2.6](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.2.6) | [8.3.3](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.3)                                                                                   | [v2025-03-04](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2025-03-04)                                                                                            |                                                                                                                                                                                |
 | **[10.1.3](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.3)** (update)        | [13.6.0.4](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.4)                                                                                                                                                   | [2.4.2](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.2)                                                                                   | [1.1.3](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.3) | [8.3.2](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.2)                                                                                   |                                                                                                                                                                                         |
 | **[10.1.2](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.2)** (update)        | [13.6.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.6.0.2)                                                                                                                                                   | [2.4.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.1)                                                                                   | [1.1.1](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.1) | [8.3.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.0)                                                                                   | [v2024-11-18](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-11-18)                                                                                            |                                                                                                                                                                                                                                     | [2.4.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.4.0)                                                                                   | [1.1.0](https://github.com/cardano-foundation/cardano-rosetta-java/releases/tag/1.1.0) | [8.3.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.3.0)                                                                                   | [v2024-11-18](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-11-18)                                                                                            |
 | **[10.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/10.1.1)** (major release) |                                                                                                                                                                                                                                     |                                                                                                                                                                     |                                                                                        |                                                                                                                                                                     |                                                                                                                                                                                         |
